modification of client's information
